--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "ngrok": "^5.0.0-beta.2",
+    "socket.io": "^4.7.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
