--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "ngrok": "^5.0.0-beta.2",
+    "rimraf": "^5.0.1",
     "socket.io": "^4.7.1",
     "uuid": "^9.0.0"
   },
